# mobile-analyzer-service

./: .gitignore  README_STREAM_TOKEN_SERVICE.md  api_server.py  debug_duplication.sh  generate_clerk_token.py  logging.conf  main.py  prompts_sent_to_gemini.txt  pyproject.toml  requirements.txt  run_analyzer.sh  run_debug_environment.sh  stream_token_service.py  test_concurrent_generation.py  test_database.py  test_jwt_endpoint.py  test_report_card_generation.py  test_report_card_integration.py  test_send_message.py  test_send_messages.py  test_stream_token.py  test_stream_token_enhanced.py
analyzer_service/: analysis.py  preprocessing.py  prompts.py  schemas.py  teaching.py  utils.py
api_clustering_output/: test-conv-1_analysis_results.json
clustering_analysis/: ZPD_analyzer.py  ZPD_priority.py  ZPD_regions.py  __init__.py  generate_report_card.py  generate_report_card_data.py  hierarchical_clustering.py  pattern_extraction_debug.txt  patterns_debug.txt  priority_calculation_debug.txt  priority_debug.txt  run_clustering_pipeline.py  verify_priority_selection.py
database/: __init__.py  api.py  crud.py  db.py  models.py  teaching_modules.db
docs/: README.md  api_endpoints.md  architecture.md  authentication_integration.md  batch_processing.md  database.md  deployment_plan.md  frontend_backend_dataflow_guide.md  generate_teaching_modules.md  langchain_google_genai_deprecation_guide.md  mobile_backend_frontend_integration.md  stream_chat_integration.md  stream_chat_token_service.md  testing.md
input_files/: 600_son_converted.json  660_golf.json
(+45 files in other folders)
