[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analyzer_service"
version = "0.1.0"
# description = "Service for analyzing AS units"
# Add other metadata as needed

[tool.setuptools.packages.find]
where = ["."] # Root directory contains the package
include = ["analyzer_service*"] # Include the main package
exclude = ["tests*"] # Exclude tests from the installable package
